--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,11 @@ dependencies {
     compile "javax:javaee-api:7.0"
     compile libraries.spring
     compile libraries.log4j
+    compile libraries.activemqCore
     testCompile libraries.activemqCore
     testCompile "junit:junit:${junitVersion}"
 	testCompile "org.mockito:mockito-core:1.10.19"
     testCompile "org.springframework:spring-test:${springVersion}"
+    testCompile libraries.activemqCore
+
 }
