--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
+mainClassName = "wdsr.exercise4.Main"
 sourceCompatibility = 1.8
 version = '1.0'
 
